test/bad/function_declaration_06.mpp
fun f(b:bool):int { }
